welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: not found: value &
while (!estSurBiscuit & & !prendBiscuit) {
                        ^