welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite()
droite()
while (!estSurBiscuit & & !prendBiscuit) {
	avance()
};

